--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
   "screenshots": [],
   "platform": "12.0.0.0",
   "application": "12.3.23590.23828",
+  "showMyCode": true,
   "idRange": {
     "from": 50100,
     "to": 50149
